# python-chat-ui

./: .gitignore  README.md  pyproject.toml  requirements.txt  rxconfig.py
app/: chat.py  database.py  main.py  message.py  schema.py
app/database/: database.py  download_sample_conversations.py
gradio/: main.py
gradio_ui/: main.py
reflex_ui/: reflex_ui.py  schema.py  sidebar.py
streamlit/: chat.py  main.py  schema.py
streamlit_ui/: main.py  settings.py
